--- a/src/app/components/chord-list/chord-list.html
+++ b/src/app/components/chord-list/chord-list.html
@@ -1,3 +1,5 @@
-@for (song of songList; track $index) {
-    <li (click)="goToSong(song.link)"> {{ song.title }} </li>
-}
+<div class="container">
+  @for (song of songList; track $index) {
+  <a class="song-list" (click)="goToSong(song.link)"> {{ song.title }} </a>
+  }
+</div>
