--- a/src/app/components/view-chords/view-chords.html
+++ b/src/app/components/view-chords/view-chords.html
@@ -1,6 +1,6 @@
 <div (click)="goBack()" class="back">
-    <h1>< BACK</h1>
+    < BACK
 </div>
 <div class="container">
-  <iframe [src]="link" frameborder="0"></iframe>
+  <iframe class="window" [src]="link" frameborder="0"></iframe>
 </div>
