Build for static page

--- a/src/app/components/view-chords/view-chords.scss
+++ b/src/app/components/view-chords/view-chords.scss
@@ -12,7 +12,9 @@
 
 .container {
   .window {
-    width: 100vw;
+    width: 75vw;
     height: 84.4vh;
+    display: block;
+    margin: auto;
   }
 }
