--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -4,4 +4,9 @@
   padding: 0px 30px;
   margin-bottom: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  
+  .text {
+    cursor: pointer;
+    width: fit-content;
+  }
 }
