Add youtube link for songs

--- a/src/app/components/view-chords/view-chords.html
+++ b/src/app/components/view-chords/view-chords.html
@@ -1,6 +1,9 @@
 <div class="buttons">
   <div (click)="goBack()" class="back">< BACK</div>
-  <div (click)="openLink()" class="link">Download here</div>
+  <div class="links">
+    <div (click)="openDownloadLink()" class="link">Download here</div>
+    <div (click)="openYoutubeLink()" class="link">Youtube Link</div>
+  </div>
 </div>
 
 <div class="container">
