--- a/src/app/components/view-chords/view-chords.scss
+++ b/src/app/components/view-chords/view-chords.scss
@@ -7,11 +7,19 @@
   .link {
     cursor: pointer;
     margin-bottom: 10px;
-    font-size: 25px;
+    font-size: 20px;
 
     &:hover {
       font-weight: 600;
+      color: black;
     }
+  }
+
+  .links {
+    display: flex;
+    gap: 20px;
+    text-decoration: underline;
+    color: gray;
   }
 }
 
