Test for mobile

--- a/src/app/components/chord-list/chord-list.scss
+++ b/src/app/components/chord-list/chord-list.scss
@@ -14,3 +14,13 @@
     }
   }
 }
+
+@media screen and (min-width: 128px) and (max-width: 900px) {
+  .container {
+    margin-left: 20px;
+
+    .song-list {
+      font-size: 14px;
+    }
+  }
+}
