--- a/src/app/components/view-chords/view-chords.html
+++ b/src/app/components/view-chords/view-chords.html
@@ -2,7 +2,7 @@
   <div (click)="goBack()" class="back">< BACK</div>
   <div class="links">
     <div (click)="openDownloadLink()" class="link">Download here</div>
-    <div (click)="openYoutubeLink()" class="link">Youtube Link</div>
+    <div (click)="openYoutubeLink()" class="link">Youtube</div>
   </div>
 </div>
 
