--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -10,3 +10,9 @@
     width: fit-content;
   }
 }
+
+@media screen and (min-width: 128px) and (max-width: 900px){
+  .header {
+    font-size: 12px;
+  }
+}
