--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -4,15 +4,17 @@
   padding: 0px 30px;
   margin-bottom: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  
+
   .text {
     cursor: pointer;
     width: fit-content;
   }
 }
 
-@media screen and (min-width: 128px) and (max-width: 900px){
+@media screen and (min-width: 128px) and (max-width: 900px) {
   .header {
     font-size: 12px;
+    position: sticky;
+    z-index: 100;
   }
 }
