--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -5,9 +5,20 @@
   margin-bottom: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 
-  .text {
-    cursor: pointer;
+  .header-items {
+    display: flex;
+    align-items: center;
     width: fit-content;
+    cursor: pointer;
+  }
+
+  .header-icon {
+    height: 60px;
+    width: 60px;
+  }
+
+  .text {
+    padding-left: 10px;
   }
 }
 
