--- a/src/app/components/view-chords/view-chords.scss
+++ b/src/app/components/view-chords/view-chords.scss
@@ -8,9 +8,10 @@
     cursor: pointer;
     margin-bottom: 10px;
     font-size: 20px;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    color: gray;
 
     &:hover {
-      font-weight: 600;
       color: black;
     }
   }
@@ -18,8 +19,6 @@
   .links {
     display: flex;
     gap: 20px;
-    text-decoration: underline;
-    color: gray;
   }
 }
 
@@ -36,16 +35,17 @@
   .buttons {
     margin: -20px 12px;
     position: relative;
-    z-index: 1;
-    background: #F5F5F5;
+    background: #f5f5f5;
     height: 30px;
-    padding-top: 10px;
+    padding-top: 15px;
 
     .back {
       display: none;
     }
     .link {
       font-size: 14px;
+      color: black;
+      text-decoration: underline;
     }
   }
 
@@ -55,7 +55,7 @@
       height: 100vh;
       display: flex;
       margin: auto;
-      margin-top: -75px;
+      margin-top: -77px;
     }
   }
 }
