Add favicon and header icon

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,3 +1,6 @@
 <div class="header">
-  <H1 class="text" (click)="goToHome()">SCMC Chord list</H1>
+  <div (click)="goToHome()" class="header-items">
+    <img src="/icon.png" class="header-icon" alt="" />
+    <H1 class="text">SCMC Chord list</H1>
+  </div>
 </div>
