--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -27,5 +27,12 @@
     font-size: 12px;
     position: sticky;
     z-index: 100;
+    height: 80px;
+    padding-left: 10px;
+  }
+
+  .header-icon {
+    height: 50px;
+    width: 50px;
   }
 }
