--- a/src/app/components/chord-list/chord-list.scss
+++ b/src/app/components/chord-list/chord-list.scss
@@ -17,7 +17,7 @@
   }
 }
 
-@media screen and (min-width: 128px) and (max-width: 900px) {
+@media only screen and (min-width: 128px) and (max-device-width: 1024px) {
   .container {
     margin-left: 20px;
 
