--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -22,7 +22,7 @@
   }
 }
 
-@media screen and (min-width: 128px) and (max-width: 900px) {
+@media only screen and (min-width: 128px) and (max-width: 1024px) {
   .header {
     font-size: 12px;
     position: sticky;
