--- a/src/app/components/view-chords/view-chords.scss
+++ b/src/app/components/view-chords/view-chords.scss
@@ -31,7 +31,7 @@
   }
 }
 
-@media screen and (min-width: 128px) and (max-width: 900px) {
+@media only screen and (min-width: 128px) and (max-device-width: 1024) {
   .buttons {
     margin: -20px 12px;
     position: relative;
