Build for gh pages

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div (click)="goToHome()" class="header-items">
-    <img src="/icon.png" class="header-icon" alt="" />
+    <img src="icon.png" class="header-icon" alt="" />
     <H1 class="text">SCMC Chord list</H1>
   </div>
 </div>
