--- a/src/app/components/view-chords/view-chords.scss
+++ b/src/app/components/view-chords/view-chords.scss
@@ -31,10 +31,11 @@
   }
 }
 
-@media only screen and (min-width: 128px) and (max-device-width: 1024) {
+@media screen and (min-width: 128px) and (max-width: 1024px) {
   .buttons {
     margin: -20px 12px;
-    position: relative;
+    // position: relative;
+    // z-index: 1;
     background: #f5f5f5;
     height: 30px;
     padding-top: 15px;
@@ -42,10 +43,15 @@
     .back {
       display: none;
     }
-    .link {
-      font-size: 14px;
-      color: black;
-      text-decoration: underline;
+
+    .links {
+      display: flex;
+      gap: 20px;
+
+      .link {
+        font-size: 12px;
+        color: black;
+      }
     }
   }
 
