--- a/src/app/components/view-chords/view-chords.scss
+++ b/src/app/components/view-chords/view-chords.scss
@@ -34,8 +34,8 @@
 @media screen and (min-width: 128px) and (max-width: 1024px) {
   .buttons {
     margin: -20px 12px;
-    // position: relative;
-    // z-index: 1;
+    position: relative;
+    z-index: 1;
     background: #f5f5f5;
     height: 30px;
     padding-top: 15px;
